--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						</div>
 						<div class="form-group with-validation">
 							<label for="task-due-date">Due Date</label>
-							<input type="text" class="form-control" id="task-due-date" placeholder="Due Date" required>
+							<input type="date" class="form-control" id="task-due-date" placeholder="Due Date" required>
 							<div class="invalid-tooltip">Please give your task a due date.</div>
 						</div>
 						<div class="form-group">
