Added task recurrence.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
 							<div class="invalid-tooltip">Please give your task a due date.</div>
 						</div>
 						<div class="form-group">
+							<label for="task-recurrence">Recurrence</label>
+							<select class="form-control" id="task-recurrence">
+								<option>None</option>
+								<option>Daily</option>
+								<option>Weekly</option>
+								<option>Monthly</option>
+								<option>Yearly</option>
+							</select>
+						</div>
+						<div class="form-group">
 							<label for="task-priority">Priority</label>
 							<select class="form-control" id="task-priority">
 								<option>None</option>
