Added faded bg and absolute position for actions.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-light bg-light justify-content-between">
-		<a class="navbar-brand">Taskr</a>
+		<a href="#" class="navbar-brand">Taskr</a>
 		<form class="form-inline">
 			<button type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#add-task">Add Task</button>
 		</form>
