--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<nav class="navbar navbar-light bg-light justify-content-between">
 		<a href="#" class="navbar-brand">Taskr</a>
 		<form class="form-inline">
-			<button type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#add-task">Add Task</button>
+			<button type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#add-task-modal">Add Task</button>
 		</form>
 	</nav>
 	<div class="container">
 		<ul id="task-list" class="list-group list-group-flush"></ul>
 	</div>
 
-	<div id="add-task" class="modal" tabindex="-1" role="dialog">
+	<div id="add-task-modal" class="modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -69,7 +69,7 @@
 		</div>
 	</div>
 
-	<div id="edit-task" class="modal" tabindex="-1" role="dialog">
+	<div id="edit-task-modal" class="modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -80,6 +80,7 @@
 				</div>
 				<div class="modal-body">
 					<form id="edit-task" class="needs-validation" novalidate>
+						<span id="e-task-id"></span>
 						<div class="form-group with-validation">
 							<label for="e-task-name">Name</label>
 							<input type="text" class="form-control" id="e-task-name" aria-describedby="task-name" placeholder="Name" required>
@@ -123,6 +124,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+	<script src="task.js"></script>
 	<script src="time.js"></script>
 	<script src="storage.js"></script>
 	<script src="ui.js"></script>
