--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 						<div class="form-group with-validation">
 							<label for="task-name">Name</label>
 							<input type="text" class="form-control" id="task-name" aria-describedby="task-name" placeholder="Name" required>
-							<div class="invalid-tooltip">Please give your task a name.</div>
+							<div class="invalid-feedback">Please give your task a name.</div>
 						</div>
 						<div class="form-group with-validation">
 							<label for="task-due-date">Due Date</label>
 							<input type="date" class="form-control" id="task-due-date" placeholder="Due Date" required>
-							<div class="invalid-tooltip">Please give your task a due date.</div>
+							<div class="invalid-feedback">Please give your task a due date.</div>
 						</div>
 						<div class="form-group">
 							<label for="task-recurrence">Recurrence</label>
@@ -84,12 +84,12 @@
 						<div class="form-group with-validation">
 							<label for="e-task-name">Name</label>
 							<input type="text" class="form-control" id="e-task-name" aria-describedby="task-name" placeholder="Name" required>
-							<div class="invalid-tooltip">Please give your task a name.</div>
+							<div class="invalid-feedback">Please give your task a name.</div>
 						</div>
 						<div class="form-group with-validation">
 							<label for="e-task-due-date">Due Date</label>
 							<input type="date" class="form-control" id="e-task-due-date" placeholder="Due Date" required>
-							<div class="invalid-tooltip">Please give your task a due date.</div>
+							<div class="invalid-feedback">Please give your task a due date.</div>
 						</div>
 						<div class="form-group">
 							<label for="e-task-recurrence">Recurrence</label>
